Revision history for OpenGbg

{{$NEXT}}
 [API Changes]

 [Bug Fixes]

 [Documentation]

 [Enhancements]

 [New Features]

 [Other Changes]

 [Requirements]

 [Stats & Dependency Changes]

 [Testing]

0.1401 2016-05-05T10:21:46Z UTC
 [API Changes]
 - Deprecated 'measurement' in
   OpenGbg::Service::AirQuality::GetLatestMeasurement. All methods and
   attributes in OpenGbg::Service::AirQuality::Measurement are now
   available directly on ::GetLatestMeasurement.

 [Enhancements]
 - Added convenience method 'is_open' to OpenGbg::Service::Bridge.

 [Stats & Dependency Changes]
 - 30 files changed, 167 insertions(+), 61 deletions(-)
 - (run req) ~ DateTime (any) --> 1.05
 - (run req) ~ MooseX::AttributeShortcuts (any) --> 0.028
 - (run req) ~ Path::Tiny (any) --> 0.072
 - (run req) ~ Type::Tiny (any) --> 1.000005
 - (run req) ~ Types::Path::Tiny (any) --> 0.005
 - (run req) ~ namespace::autoclean 0.18 --> 0.22
 - (run req) ~ perl 5.010001 --> 5.010000
 - (dev req) + Badge::Depot 0.0103
 - (dev req) + Badge::Depot::Plugin::Coverage (any)
 - (dev req) + Badge::Depot::Plugin::Cpantesters (any)
 - (dev req) + Badge::Depot::Plugin::Kwalitee (any)
 - (dev req) + Badge::Depot::Plugin::Perl (any)
 - (dev req) + Badge::Depot::Plugin::Travis (any)
 - (dev req) + Dist::Zilla 5.000
 - (dev req) + Dist::Zilla::Plugin::Authority 1.009
 - (dev req) + Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional
   0.007
 - (dev req) + Dist::Zilla::Plugin::ChangeStats::Dependencies::Git 0.0100
 - (dev req) + Dist::Zilla::Plugin::Git 2.036
 - (dev req) + Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch 0.013
 - (dev req) + Dist::Zilla::Plugin::Git::Commit (any)
 - (dev req) + Dist::Zilla::Plugin::MetaConfig (any)
 - (dev req) + Dist::Zilla::Plugin::NextRelease::Grouped 0.0200
 - (dev req) + Dist::Zilla::Plugin::RewriteVersion::Transitional 0.007
 - (dev req) + Pod::Weaver::Section::GenerateSection 1.01
 - (dev req) + Test::EOF (any)
 - (dev req) + Test::Version 1