@@ -1,8 +1,6 @@
 sudo: true
 language: perl
 perl:
-   - '5.10'
-   - '5.12'
    - '5.14'
    - '5.16'
    - '5.18'
