@@ -4,7 +4,7 @@
       "Erik Carlsson <info@code301.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 5.044, Dist::Iller version 0.1408, CPAN::Meta::Converter version 2.143240",
+   "generated_by" : "Dist::Iller version 0.1408, Dist::Zilla version 6.007, CPAN::Meta::Converter version 2.143240",
    "license" : [
       "perl_5"
    ],
@@ -70,6 +70,7 @@
             "Dist::Zilla::Plugin::PodSyntaxTests" : "0",
             "Dist::Zilla::Plugin::PodWeaver" : "4.006",
             "Dist::Zilla::Plugin::Prereqs" : "0",
+            "Dist::Zilla::Plugin::PromptIfStale" : "0",
             "Dist::Zilla::Plugin::Readme" : "0",
             "Dist::Zilla::Plugin::ReadmeAnyFromPod" : "0.150250",
             "Dist::Zilla::Plugin::RewriteVersion::Transitional" : "0.007",
@@ -109,17 +110,17 @@
          },
          "suggests" : {
             "Dist::Iller" : "0.1408",
-            "Dist::Iller::Config::Author::CSSON" : "0.0309"
+            "Dist::Iller::Config::Author::CSSON" : "0.0312"
          }
       },
       "runtime" : {
          "requires" : {
             "Config::Any" : "0",
-            "DateTime" : "1.05",
+            "DateTime" : "1.36",
             "DateTime::Format::HTTP" : "0",
             "File::HomeDir" : "0",
             "HTTP::Tiny" : "0",
-            "Moose" : "2.1400",
+            "Moose" : "2.1803",
             "MooseX::AttributeShortcuts" : "0.028",
             "Path::Tiny" : "0.072",
             "Sub::Exporter" : "0",
@@ -150,95 +151,95 @@
    "provides" : {
       "OpenGbg" : {
          "file" : "lib/OpenGbg.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Elk" : {
          "file" : "lib/OpenGbg/Elk.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Exceptions" : {
          "file" : "lib/OpenGbg/Exceptions.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::AirQuality" : {
          "file" : "lib/OpenGbg/Service/AirQuality.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::AirQuality::GetLatestMeasurement" : {
          "file" : "lib/OpenGbg/Service/AirQuality/GetLatestMeasurement.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::AirQuality::GetMeasurements" : {
          "file" : "lib/OpenGbg/Service/AirQuality/GetMeasurements.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::AirQuality::Measurement" : {
          "file" : "lib/OpenGbg/Service/AirQuality/Measurement.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::AirQuality::Measurements" : {
          "file" : "lib/OpenGbg/Service/AirQuality/Measurements.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::Bridge" : {
          "file" : "lib/OpenGbg/Service/Bridge.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::Bridge::BridgeOpening" : {
          "file" : "lib/OpenGbg/Service/Bridge/BridgeOpening.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::Bridge::BridgeOpenings" : {
          "file" : "lib/OpenGbg/Service/Bridge/BridgeOpenings.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::Bridge::GetIsCurrentlyOpen" : {
          "file" : "lib/OpenGbg/Service/Bridge/GetIsCurrentlyOpen.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::Bridge::GetOpenedStatus" : {
          "file" : "lib/OpenGbg/Service/Bridge/GetOpenedStatus.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::Getter" : {
          "file" : "lib/OpenGbg/Service/Getter.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::StyrOchStall" : {
          "file" : "lib/OpenGbg/Service/StyrOchStall.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::StyrOchStall::GetBikeStation" : {
          "file" : "lib/OpenGbg/Service/StyrOchStall/GetBikeStation.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::StyrOchStall::GetBikeStations" : {
          "file" : "lib/OpenGbg/Service/StyrOchStall/GetBikeStations.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::StyrOchStall::Station" : {
          "file" : "lib/OpenGbg/Service/StyrOchStall/Station.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::TrafficCamera" : {
          "file" : "lib/OpenGbg/Service/TrafficCamera.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::TrafficCamera::CameraDevice" : {
          "file" : "lib/OpenGbg/Service/TrafficCamera/CameraDevice.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::TrafficCamera::CameraDevices" : {
          "file" : "lib/OpenGbg/Service/TrafficCamera/CameraDevices.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::TrafficCamera::GetCameraImage" : {
          "file" : "lib/OpenGbg/Service/TrafficCamera/GetCameraImage.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       },
       "OpenGbg::Service::TrafficCamera::GetTrafficCameras" : {
          "file" : "lib/OpenGbg/Service/TrafficCamera/GetTrafficCameras.pm",
-         "version" : "0.1401"
+         "version" : "0.1402"
       }
    },
    "release_status" : "stable",
@@ -253,7 +254,7 @@
          "web" : "https://github.com/Csson/p5-OpenGbg"
       }
    },
-   "version" : "0.1401",
+   "version" : "0.1402",
    "x_Dist_Zilla" : {
       "perl" : {
          "version" : "5.020001"
@@ -281,12 +282,27 @@
                }
             },
             "name" : "Git::GatherDir",
-            "version" : "2.036"
+            "version" : "2.039"
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::PromptIfStale",
+            "config" : {
+               "Dist::Zilla::Plugin::PromptIfStale" : {
+                  "check_all_plugins" : 1,
+                  "check_all_prereqs" : 0,
+                  "modules" : [],
+                  "phase" : "release",
+                  "run_under_travis" : 0,
+                  "skip" : []
+               }
+            },
+            "name" : "PromptIfStale",
+            "version" : "0.051"
          },
          {
             "class" : "Dist::Zilla::Plugin::CopyFilesFromBuild",
             "name" : "CopyFilesFromBuild",
-            "version" : "0.151680"
+            "version" : "0.161350"
          },
          {
             "class" : "Dist::Zilla::Plugin::Authority",
@@ -433,7 +449,7 @@
                }
             },
             "name" : "PodWeaver",
-            "version" : "4.006"
+            "version" : "4.008"
          },
          {
             "class" : "Dist::Zilla::Plugin::Git::Check",
@@ -458,7 +474,7 @@
                }
             },
             "name" : "Git::Check",
-            "version" : "2.036"
+            "version" : "2.039"
          },
          {
             "class" : "Dist::Zilla::Plugin::GithubMeta",
@@ -468,17 +484,17 @@
          {
             "class" : "Dist::Zilla::Plugin::Readme",
             "name" : "Readme",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::ReadmeAnyFromPod",
             "name" : "ReadmeAnyFromPod",
-            "version" : "0.150250"
+            "version" : "0.161170"
          },
          {
             "class" : "Dist::Zilla::Plugin::MetaNoIndex",
             "name" : "MetaNoIndex",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::MakeMaker",
@@ -488,17 +504,17 @@
                }
             },
             "name" : "MakeMaker",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::MetaConfig",
             "name" : "MetaConfig",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::MetaJSON",
             "name" : "MetaJSON",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::MetaProvides::Package",
@@ -508,18 +524,23 @@
                      {
                         "class" : "Dist::Zilla::Plugin::FinderCode",
                         "name" : "MetaProvides::Package/AUTOVIV/:InstallModulesPM",
-                        "version" : "5.044"
+                        "version" : "6.007"
                      }
-                  ]
+                  ],
+                  "include_underscores" : 0
                },
                "Dist::Zilla::Role::MetaProvider::Provider" : {
                   "inherit_missing" : "1",
                   "inherit_version" : "1",
                   "meta_noindex" : "1"
+               },
+               "Dist::Zilla::Role::ModuleMetadata" : {
+                  "Module::Metadata" : "1.000026",
+                  "version" : "0.003"
                }
             },
             "name" : "MetaProvides::Package",
-            "version" : "2.003001"
+            "version" : "2.004002"
          },
          {
             "class" : "Dist::Zilla::Plugin::DistIller::MetaGeneratedBy",
@@ -530,6 +551,7 @@
             "class" : "Dist::Zilla::Plugin::Git::Contributors",
             "config" : {
                "Dist::Zilla::Plugin::Git::Contributors" : {
+                  "git --version" : "1.9.1",
                   "include_authors" : 0,
                   "include_releaser" : 1,
                   "order_by" : "name",
@@ -539,7 +561,7 @@
                }
             },
             "name" : "Git::Contributors",
-            "version" : "0.018"
+            "version" : "0.024"
          },
          {
             "class" : "Dist::Zilla::Plugin::Test::Kwalitee::Extra",
@@ -567,15 +589,15 @@
                "Dist::Zilla::Plugin::Test::EOL" : {
                   "filename" : "xt/author/eol.t",
                   "finder" : [
-                     ":InstallModules",
                      ":ExecFiles",
+                     ":InstallModules",
                      ":TestFiles"
                   ],
-                  "trailing_whitespace" : "1"
+                  "trailing_whitespace" : 1
                }
             },
             "name" : "Test::EOL",
-            "version" : "0.18"
+            "version" : "0.19"
          },
          {
             "class" : "Dist::Zilla::Plugin::Test::EOF",
@@ -590,7 +612,7 @@
          {
             "class" : "Dist::Zilla::Plugin::Test::Version",
             "name" : "Test::Version",
-            "version" : "1.05"
+            "version" : "1.09"
          },
          {
             "class" : "Dist::Zilla::Plugin::Test::Compile",
@@ -617,22 +639,22 @@
          {
             "class" : "Dist::Zilla::Plugin::Test::ReportPrereqs",
             "name" : "Test::ReportPrereqs",
-            "version" : "0.021"
+            "version" : "0.025"
          },
          {
             "class" : "Dist::Zilla::Plugin::PodSyntaxTests",
             "name" : "PodSyntaxTests",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::MetaYAML",
             "name" : "MetaYAML",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::License",
             "name" : "License",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::RunExtraTests",
@@ -642,32 +664,32 @@
                }
             },
             "name" : "RunExtraTests",
-            "version" : "0.028"
+            "version" : "0.029"
          },
          {
             "class" : "Dist::Zilla::Plugin::ShareDir",
             "name" : "ShareDir",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::ExecDir",
             "name" : "ExecDir",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::Manifest",
             "name" : "Manifest",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::ManifestSkip",
             "name" : "ManifestSkip",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::CheckChangesHasContent",
             "name" : "CheckChangesHasContent",
-            "version" : "0.008"
+            "version" : "0.010"
          },
          {
             "class" : "Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch",
@@ -682,17 +704,17 @@
          {
             "class" : "Dist::Zilla::Plugin::TestRelease",
             "name" : "TestRelease",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::ConfirmRelease",
             "name" : "ConfirmRelease",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::UploadToCPAN",
             "name" : "UploadToCPAN",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::TravisYML",
@@ -724,7 +746,7 @@
                }
             },
             "name" : "CommitBeforeTag",
-            "version" : "2.036"
+            "version" : "2.039"
          },
          {
             "class" : "Dist::Zilla::Plugin::Git::Tag",
@@ -733,7 +755,7 @@
                   "branch" : null,
                   "changelog" : "Changes",
                   "signed" : 0,
-                  "tag" : "0.1401",
+                  "tag" : "0.1402",
                   "tag_format" : "%v",
                   "tag_message" : "Release %v%n%n%c"
                },
@@ -745,7 +767,7 @@
                }
             },
             "name" : "Git::Tag",
-            "version" : "2.036"
+            "version" : "2.039"
          },
          {
             "class" : "Dist::Zilla::Plugin::InstallRelease",
@@ -793,7 +815,7 @@
                }
             },
             "name" : "CommitAfterRelease",
-            "version" : "2.036"
+            "version" : "2.039"
          },
          {
             "class" : "Dist::Zilla::Plugin::Git::Push",
@@ -809,7 +831,7 @@
                }
             },
             "name" : "Git::Push",
-            "version" : "2.036"
+            "version" : "2.039"
          },
          {
             "class" : "Dist::Zilla::Plugin::Clean",
@@ -825,7 +847,7 @@
                }
             },
             "name" : "DevelopRequires",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::Prereqs",
@@ -836,7 +858,7 @@
                }
             },
             "name" : "DevelopSuggests",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::Prereqs",
@@ -847,7 +869,7 @@
                }
             },
             "name" : "RuntimeRequires",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::Prereqs",
@@ -858,62 +880,62 @@
                }
             },
             "name" : "TestRequires",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::FinderCode",
             "name" : ":InstallModules",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::FinderCode",
             "name" : ":IncModules",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::FinderCode",
             "name" : ":TestFiles",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::FinderCode",
             "name" : ":ExtraTestFiles",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::FinderCode",
             "name" : ":ExecFiles",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::FinderCode",
             "name" : ":PerlExecFiles",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::FinderCode",
             "name" : ":ShareFiles",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::FinderCode",
             "name" : ":MainModule",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::FinderCode",
             "name" : ":AllFiles",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::FinderCode",
             "name" : ":NoFiles",
-            "version" : "5.044"
+            "version" : "6.007"
          },
          {
             "class" : "Dist::Zilla::Plugin::FinderCode",
             "name" : "MetaProvides::Package/AUTOVIV/:InstallModulesPM",
-            "version" : "5.044"
+            "version" : "6.007"
          }
       ],
       "zilla" : {
@@ -921,9 +943,10 @@
          "config" : {
             "is_trial" : "0"
          },
-         "version" : "5.044"
+         "version" : "6.007"
       }
    },
-   "x_authority" : "cpan:CSSON"
+   "x_authority" : "cpan:CSSON",
+   "x_serialization_backend" : "Cpanel::JSON::XS version 3.0114"
 }
 
