@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.044.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.007.
 use strict;
 use warnings;
 
@@ -18,11 +18,11 @@ my %WriteMakefileArgs = (
   "NAME" => "OpenGbg",
   "PREREQ_PM" => {
     "Config::Any" => 0,
-    "DateTime" => "1.05",
+    "DateTime" => "1.36",
     "DateTime::Format::HTTP" => 0,
     "File::HomeDir" => 0,
     "HTTP::Tiny" => 0,
-    "Moose" => "2.1400",
+    "Moose" => "2.1803",
     "MooseX::AttributeShortcuts" => "0.028",
     "Path::Tiny" => "0.072",
     "Sub::Exporter" => 0,
@@ -51,7 +51,7 @@ my %WriteMakefileArgs = (
 
 my %FallbackPrereqs = (
   "Config::Any" => 0,
-  "DateTime" => "1.05",
+  "DateTime" => "1.36",
   "DateTime::Format::HTTP" => 0,
   "ExtUtils::MakeMaker" => 0,
   "File::HomeDir" => 0,
@@ -59,7 +59,7 @@ my %FallbackPrereqs = (
   "HTTP::Tiny" => 0,
   "IO::Handle" => 0,
   "IPC::Open3" => 0,
-  "Moose" => "2.1400",
+  "Moose" => "2.1803",
   "MooseX::AttributeShortcuts" => "0.028",
   "Path::Tiny" => "0.072",
   "Sub::Exporter" => 0,
