@@ -1,6 +1,6 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2016-05-05 10:13:39 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2016-08-12 20:38:11 UTC.
 ; The following configs were used:
-; * Dist::Iller::Config::Author::CSSON: 0.0309
+; * Dist::Iller::Config::Author::CSSON: 0.0312
 
 name = OpenGbg
 author = Erik Carlsson <info@code301.com>
@@ -13,6 +13,9 @@ exclude_filename = META.json
 exclude_filename = LICENSE
 exclude_filename = README.md
 exclude_filename = Makefile.PL
+
+[PromptIfStale]
+check_all_plugins = 1
 
 [CopyFilesFromBuild]
 copy = META.json
@@ -130,7 +133,7 @@ release_branch = release
 [UploadToCPAN]
 
 [TravisYML]
-perl_version = 5.10 5.12 5.14 5.16 5.18 5.20 5.22
+perl_version = 5.14 5.16 5.18 5.20 5.22
 post_before_install = sudo apt-get update -qq && sudo apt-get install -y libxml2-dev
 pre_install = cpanm XML::LibXML XML::Rabbit
 sudo = 1
@@ -197,6 +200,7 @@ Dist::Zilla::Plugin::NextRelease::Grouped = 0.0200
 Dist::Zilla::Plugin::PodSyntaxTests = 0
 Dist::Zilla::Plugin::PodWeaver = 4.006
 Dist::Zilla::Plugin::Prereqs = 0
+Dist::Zilla::Plugin::PromptIfStale = 0
 Dist::Zilla::Plugin::Readme = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0.150250
 Dist::Zilla::Plugin::RewriteVersion::Transitional = 0.007
@@ -231,15 +235,15 @@ Test::Warnings = 0.026
 
 [Prereqs / DevelopSuggests]
 Dist::Iller = 0.1408
-Dist::Iller::Config::Author::CSSON = 0.0309
+Dist::Iller::Config::Author::CSSON = 0.0312
 
 [Prereqs / RuntimeRequires]
 Config::Any = 0
-DateTime = 1.05
+DateTime = 1.36
 DateTime::Format::HTTP = 0
 File::HomeDir = 0
 HTTP::Tiny = 0
-Moose = 2.1400
+Moose = 2.1803
 MooseX::AttributeShortcuts = 0.028
 Path::Tiny = 0.072
 Sub::Exporter = 0
@@ -295,6 +299,7 @@ Test::More = 0.96
 ; authordep Dist::Zilla::Plugin::PodSyntaxTests = 0
 ; authordep Dist::Zilla::Plugin::PodWeaver = 4.006
 ; authordep Dist::Zilla::Plugin::Prereqs = 0
+; authordep Dist::Zilla::Plugin::PromptIfStale = 0
 ; authordep Dist::Zilla::Plugin::Readme = 0
 ; authordep Dist::Zilla::Plugin::ReadmeAnyFromPod = 0.150250
 ; authordep Dist::Zilla::Plugin::RewriteVersion::Transitional = 0.007
