@@ -1,6 +1,6 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2016-05-05 09:34:16 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2016-08-12 20:38:11 UTC.
 ; The following configs were used:
-; * Dist::Iller::Config::Author::CSSON: 0.0309
+; * Dist::Iller::Config::Author::CSSON: 0.0312
 
 [@CorePrep]
 
@@ -9,6 +9,7 @@
 [Name]
 
 [Badges]
+-kwalitee_author = CSSON
 badge = perl
 badge = travis
 badge = kwalitee
